--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "dependencies": {
     "whatsapp-web.js": "^1.23.0",
     "qrcode-terminal": "^0.12.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
     "@pedroslopez/moduleraid": "^5.0.2",
     "fluent-ffmpeg": "2.1.2",
     "mime": "^3.0.0",
